kubernetes/tasks-app-v1-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "10"
  creationTimestamp: null
  generation: 1
  labels:
    run: tasks-app
  name: tasks-app
  selfLink: /apis/extensions/v1beta1/namespaces//deployments/tasks-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tasks-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: tasks-app
    spec:
      containers:
      - args:
        - php
        - artisan
        - serve
        - --host=0.0.0.0
        image: tasks:1
        imagePullPolicy: IfNotPresent
        name: tasks-app
        ports:
        - containerPort: 8000
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /test
            port: 8000
            scheme: HTTP
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
