kubernetes/tasks-memcached-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    run: tasks-memcached
  name: tasks-memcached
  selfLink: /apis/extensions/v1beta1/namespaces//deployments/tasks-memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tasks-memcached
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: tasks-memcached
    spec:
      containers:
      - image: memcached:alpine
        imagePullPolicy: IfNotPresent
        name: tasks-memcached
        ports:
        - containerPort: 11211
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
