kubernetes/tasks-app-v1-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: tasks-app
  name: tasks-app
  selfLink: /api/v1/namespaces//services/tasks-app
spec:
  clusterIP: <unknown>
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    run: tasks-app
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
