kubernetes/tasks-memcached-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: tasks-memcached
  name: tasks-memcached
  selfLink: /api/v1/namespaces//services/tasks-memcached
spec:
  clusterIP: <unknown>
  ports:
  - port: 11211
    protocol: TCP
    targetPort: 11211
  selector:
    run: tasks-memcached
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
