kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/tls-acme: "true"
  name: general-ingress
spec:
  rules:
  - host: tasks.zoidbergwill.com
    http:
      paths:
      - backend:
          serviceName: tasks-app
          servicePort: 80
        path: /
  tls:
  - hosts:
    - tasks.zoidbergwill.com
    secretName: tasks-tls
